--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,7 +28,7 @@ header {
 
 form {
     margin-top: 40px;
-    width: 400px;
+    width: 100vh;
     padding: 20px;
     background-color: #f8f9fa;
     border-radius: 8px;
@@ -41,12 +41,16 @@ form {
 
 
 input {
-    width: 100%;
+    width: 100vh;
     padding: 8px;
     margin-top: 5px;
     margin-bottom: 10px;
     font-size: 16px;
-    
+}
+
+label {
+    width: 100vh;
+    font-size: 24px;
 }
 
 h1 {
