--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -103,6 +103,22 @@ h1 {
     border-color: #C28008;
 }
 
+.check-control {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+  }
+  
+  .check-control label {
+    display: flex;
+   
+    gap: 15px;
+    font-weight: normal;
+  }
+  
+  
+
 #navbar img {
     width: 90px;
 }
@@ -148,6 +164,7 @@ button {
     width: 100%;
     margin-bottom: 0;
     text-align: center;
+    margin-top: 80px;
     padding: 10px;
 }
 
@@ -158,6 +175,7 @@ button {
     width: 100%;
     margin-bottom: 0;
     text-align: center;
+    margin-top: 80px;
     padding: 10px;
 }
 
