--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,6 +86,17 @@ button.btn-success:hover {
     background-color: #f1f1f1;
 }
 
+.container {
+    margin-top: 20px;
+    align-items: center;
+    text-align: center;
+}
+
+.serv-form{
+    margin-left: 700px;
+    margin-top: 100px;
+    
+}
 
 .row {
     margin: 0;
